//
// This file is part of arduino-cli.
//
// Copyright 2018 ARDUINO SA (http://www.arduino.cc/)
//
// This software is released under the GNU General Public License version 3,
// which covers the main part of arduino-cli.
// The terms of this license can be found at:
// https://www.gnu.org/licenses/gpl-3.0.en.html
//
// You can be released from the requirements of the above licenses by purchasing
// a commercial license. Buying such a license is mandatory if you want to modify or
// otherwise use the software for commercial activities involving the Arduino
// software without disclosing the source code of your own applications. To purchase
// a commercial license, send an email to license@arduino.cc.
//

syntax = "proto3";

package arduino;

option go_package = "github.com/arduino/arduino-cli/rpc";

import "common.proto";

message LibraryDownloadReq {
    Instance instance = 1;
    string name = 2;
    string version = 3;
}

message LibraryDownloadResp {
    DownloadProgress progress = 1;
}

message LibraryInstallReq {
    Instance instance = 1;
    string name = 2;
    string version = 3;
}

message LibraryInstallResp {
    DownloadProgress progress = 1;
    TaskProgress task_progress = 2;
}

message LibraryUninstallReq {
    Instance instance = 1;
    string name = 2;
    string version = 3;
}

message LibraryUninstallResp {
    TaskProgress task_progress = 1;
}

message LibraryUpgradeAllReq {
    Instance instance = 1;
}

message LibraryUpgradeAllResp {
    DownloadProgress progress = 1;
    TaskProgress task_progress = 2;
}

message LibrarySearchReq {
    Instance instance = 1;
    bool names = 2;
    string query = 3;
}

message LibrarySearchResp {
    repeated SearchLibraryOutput search_output = 1;
}

message SearchLibraryOutput {
    string Name = 1;
    map<string,LibraryRelease> Releases = 2;
    LibraryRelease latest = 3;
}

message LibraryRelease {
    string author = 1;
    string version = 2;
    string maintainer = 3;
    string sentence = 4;
    string paragraph = 5;
    string website = 6;
    string category = 7;
    repeated string architectures = 8;
    repeated string types = 9;
    DownloadResource resources = 10;
}

message DownloadResource {
    string url = 1;
    string archivefilename = 2;
    string checksum = 3;
    int64  size = 4;
    string cachepath = 5;
}
